2018-01-26  Charlie Zender  <zender@uci.edu>

	* Modify code to eliminate MSVC compiler warnings

2018-01-25  Charlie Zender  <zender@uci.edu>

	* Add _Filter printing to nco_prn_att()

	* Add timers to ncclimo

	* Add nc[o]_def/inq_var_filter() stubs

	* NCO 4.7.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3-alpha01: Coughy';git push
	git tag -a 4.7.3-alpha01 -m 'Functionally identical to 4.7.2';git push --tags

	* Add tm3_lat_flt to buggy.cdl to test _Filter attribute

	* Add DSCOVR L2 dimensions number_of_lines, number_of_pixels to ncremap database

	* ncclimo/ncremap: deprecate pileus

	* nco.texi: Fix errors introduced by solar_zenith_angle() documentation

	* NCO 4.7.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.2: Sapiens';git push
	git tag -a 4.7.2 -m 'Sapiens: splitter ypf, tempest2 boutique, ncremap psn arg, cheyenne';git push --tags

	* ncclimo: provisional, lackluster support for Theta

2018-01-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.2-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.2-beta01: Flighty';git push
	git tag -a 4.7.2-beta01 -m 'Flighty: splitter ypf, tempest2 boutique, ncremap psn arg, cheyenne';git push --tags

	* ncclimo fully working on cheyenne

2018-01-19  Charlie Zender  <zender@uci.edu>

	* ncclimo fails on cheyenne non-interactive compute nodes due to mpirun issues

	* Verified ncclimo bck mode works on cheyenne interactive compute nodes

	* Include cheyenne compute nodes in list of hardcoded paths to add

	* Tweak ncremap, ncclimo usage strings

2018-01-18  Charlie Zender  <zender@uci.edu>

	* Add and document ncremap --mss_val to support MPAS-LI datasets

	* #include "nco_cln_utl.h" in fmc_all_cls.hh to prototype nco_cln_prs_tm() and fix compilation error on edison

2018-01-12  Charlie Zender  <zender@uci.edu>

	* Update ncremap/ncclimo to use latest cheyenne paths, deprecate yellowstone

	* Successful Tempest2 builds on MacOS, now ncremap is cross-platform again
