@@ -89,7 +89,7 @@ set(netcdf_root "$ENV{NETCDF_ROOT}")
 if(netcdf_root)
   set(NETCDF_INCLUDE "${netcdf_root}/include")
   set(NETCDF_LIBRARY_PATH "${netcdf_root}/lib")
-  message("${color_blue}-- Using user defined netCDF location: ${netcdf_root}${color_reset}")
+  message("${color_blue}-- Using user-defined netCDF root location: ${netcdf_root}${color_reset}")
 endif()
 
 #//////////////////////////
@@ -100,8 +100,14 @@ if(NETCDF_INCLUDE)
   if(EXISTS "${NETCDF_INCLUDE}/netcdf.h")
     message("-- Using ${NETCDF_INCLUDE}/netcdf.h")
   else()
-    message(FATAL_ERROR "${color_red}netcdf.h not found at ${NETCDF_INCLUDE}${color_reset}")
-  endif()
+    if(netcdf_root)
+        set(NETCDF_INCLUDE "${netcdf_root}/include")
+    endif()
+    if(EXISTS "${NETCDF_INCLUDE}/netcdf.h")
+      message("-- Using ${NETCDF_INCLUDE}/netcdf.h")
+    else()
+      message(FATAL_ERROR "${color_red}netcdf.h not found at ${NETCDF_INCLUDE}${color_reset}")
+    endif()
 endif()
 
 find_path(NETCDF_INCLUDE netcdf.h ${find_opt})
@@ -119,7 +125,13 @@ if(NETCDF_LIBRARY)
   if(EXISTS "${NETCDF_LIBRARY}")
     message("-- Using ${NETCDF_LIBRARY}")
   else()
-    message(FATAL_ERROR "${color_red}Specified ${NETCDF_LIBRARY} does not exist${color_reset}")
+    if(netcdf_root)
+        set(NETCDF_LIBRARY "${netcdf_root}/lib")
+    endif()
+    if(EXISTS "${NETCDF_LIBRARY}")
+        message("-- Using ${NETCDF_LIBRARY}")
+    else()
+        message(FATAL_ERROR "${color_red}Specified ${NETCDF_LIBRARY} does not exist${color_reset}")
   endif()
 endif()
 
